task21 fixed